some css changes, missing images and fix GH vulnerabilities

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,11 +9,11 @@ layout: layout
                     <div class="title-container">
                         <h1 class="page-heading">{{ page.title }}</h1>
     
-                        <div class="initials"><a href="https://jonfriesen.ca/"></a></div>
+                        <div class="initials"><a href="https://dominicstpierre.com"></a></div>
                     </div>
                     <div class="meta">
                         
-                        <div class="date" title="{{ page.date }}">{{ page.date | date %M %d, %Y }}</div>
+                        <div class="date" title="{{ page.date }}">{{ page.date | date_to_string }}</div>
                         
                         
                 <div class="reading-time"><div class="middot"></div>6 minutes read</div>
