--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -61,7 +61,7 @@
 
     <link href="/assets/css/reset.css" rel="stylesheet" />
     <link href="/assets/css/pygments.css" rel="stylesheet" />
-    <link href="/assets/css/main.css" rel="stylesheet" />
+    <link href="/assets/css/main.css?v=1.1" rel="stylesheet" />
 
 
 </head>
