--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -335,7 +335,8 @@ section.main .container {
 }
 section.main .content {
   color: #111;
-  font-size: 16px;
+  font-size: 18px;
+  font-family: Georgia, 'Times New Roman', Times,, serif;
 }
 section.main .content .title-container {
   display: -webkit-flex;
